Implemented retrieve popular movies